force-app/main/default/objects/Resgate__c/Resgate__c.object-meta.xml
<CustomObject>
    <description>Registro de troca de pontos por um produto do catalogo.</description>
    <label>Resgate</label>
    <nameField>
        <displayFormat>RESGATE-{0000}</displayFormat>
        <label>Numero do Resgate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resgates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>