force-app/main/default/objects/Resgate__c/fields/Codigo_Retirada__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Retirada__c</fullName>
    <description>Codigo alfanumerico unico que o cliente apresenta no caixa (via QR code ou digitado) para retirar o produto resgatado na loja fisica.</description>
    <label>Codigo de Retirada</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>