force-app/main/default/objects/Resgate__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resgates</relationshipLabel>
    <relationshipName>Resgates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>