force-app/main/default/objects/Resgate__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <description>CPF ou RG do cliente, informado no momento do resgate, para conferencia de identidade na retirada do produto na loja.</description>
    <label>Documento (CPF ou RG)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>