force-app/main/default/objects/Resgate__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereco (Rua e Numero)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>