force-app/main/default/objects/Resgate__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado (UF)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>