force-app/main/default/objects/Resgate__c/fields/Pontos_Utilizados__c.field-meta.xml
<CustomField>
    <fullName>Pontos_Utilizados__c</fullName>
    <label>Pontos Utilizados</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>