force-app/main/default/objects/Resgate__c/fields/ProdutoResgate__c.field-meta.xml
<CustomField>
    <fullName>ProdutoResgate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produto</label>
    <referenceTo>ProdutoResgate__c</referenceTo>
    <relationshipLabel>Resgates</relationshipLabel>
    <relationshipName>Resgates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>