force-app/main/default/objects/Resgate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitado</fullName>
                <default>true</default>
                <label>Solicitado</label>
            </value>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>